--- a/loveheart/index.html
+++ b/loveheart/index.html
@@ -28,7 +28,7 @@
 		<div id="code">
 
    			<span class="keyword">I want to say:</span><br />
-			Mrs. 胡<br />
+			Miss. 胡<br />
             <span class="keyword"> I love you! </span><br />
             -- 朱念<br />
 
