--- a/loveheart/index.html
+++ b/loveheart/index.html
@@ -30,7 +30,7 @@
    			<span class="keyword">I want to say:</span><br />
 			Miss. 胡<br />
             <span class="keyword"> I love you! </span><br />
-            -- 朱念<br />
+            -- Zhu<br />
 
 
 		</div>
