--- a/loveheart/index.html
+++ b/loveheart/index.html
@@ -56,7 +56,7 @@ var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
 var together = new Date();
 
-together.setFullYear(2022, 9, 17);//1.23；3.29
+together.setFullYear(2022, 8, 17);//1.23；3.29
 together.setHours(12);
 together.setMinutes(0);
 together.setSeconds(0);
@@ -86,8 +86,8 @@ if (!document.createElement('canvas').getContext) {
 }
 </script>
 <div style="text-align:center;clear:both">
-<p>Made for Mrs.Right, made by <a href="https://github.com/stormzudi" target="_blank">stormzudi<a /></p>
-<p>Copyright © 2017 - 2019. All Rights Reserved. Designed by <a href="https://github.com/stormzudi" target="_blank">stormzudi<a /> </p>
+<p>Made for Miss.Hu, made by <a href="https://github.com/stormzudi" target="_blank">stormzudi<a /></p>
+<p>Copyright © 2017 - 2019. Designed by <a href="https://github.com/stormzudi" target="_blank">stormzudi<a /> </p>
 </div>
 </body>
 </html>
